# vulkan-engine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  compile_flags.txt  compile_shaders.bat  compile_shaders.sh  download_dependencies.bat  download_dependencies.sh  setup.bat  setup.sh
.github/workflows/: format.yml
assets/shaders/engine/: test.spv
cmake/: symlink_or_copy.cmake
engine/: CMakeLists.txt  bitset.cpp  deletion_queue.cpp  deletions.cpp  engine.cpp  engine_utils.cpp  logger.cpp  random.cpp  shared_library_linux.cpp  shared_library_windows.cpp  stb_image_implementation.cpp  version.cpp
engine/assets/: library.cpp
engine/ecs/: CMakeLists.txt  component.cpp  default.cpp  entity.cpp  query.cpp
engine/fileio/: CMakeLists.txt  error.cpp  file.cpp
engine/graphics/: CMakeLists.txt  descriptor.cpp  graphics.cpp  pipeline.cpp  types.cpp  util.cpp  vulkan.cpp  vulkan_device.cpp  vulkan_image.cpp  vulkan_instance.cpp  vulkan_physical_device.cpp  vulkan_queue.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp
engine/graphics/scene/: CMakeLists.txt
engine/linalg/: CMakeLists.txt  linalg.cpp  matrix.cpp  matrix2_operations.cpp  matrix3_operations.cpp  matrix4_operations.cpp  vector.cpp  vector2_operations.cpp  vector3_operations.cpp  vector4_operations.cpp
engine/pool/: CMakeLists.txt
engine/reflection/: CMakeLists.txt  type.cpp
engine/state/: CMakeLists.txt  manager.cpp  state.cpp
engine/utilities/: CMakeLists.txt  quaternion.cpp  transform.cpp
game/: CMakeLists.txt  main.cpp  world.cpp
game/level/: CMakeLists.txt
game/tilemap/: CMakeLists.txt  tilemap.cpp
include/: imconfig.h
include/engine/: bitset.h  deletion_queue.h  engine.h  engine_utils.h  logger.h  meta_defines.h  newtype.h  pool.h  random.h  rwlock.h  shared_library.h  stb_image_write_wrapped.h  version.h
include/engine/assets/: library.h
include/engine/ecs/: component.h  default.h  defines.h  entity.h  query.h  system.h
include/engine/fileio/: error.h  file.h
include/engine/graphics/: descriptor.h  graphics.h  pipeline.h  types.h  util.cpp  util.h  vulkan.h
include/engine/graphics/scene/: camera.h  draw_context.h  node.h  renderable.h  scene.h  types.h
include/engine/linalg/: linalg.h  matrix.h  matrix_operations.h  vector.h  vector_operations.h
include/engine/pool/: region.h  types.h
include/engine/reflection/: type.h  type_float.h  type_int16.h  type_int32.h  type_int64.h  type_int8.h  type_string.h
include/engine/state/: manager.h  state.h
include/engine/utilities/: quaternion.h  transform.h
include/game/: world.h
include/game/tilemap/: tilemap.h
include/linalg/: matrix.h  matrix_ops.h  meta.h  simd.h  vector.h  vector_ops.h
linalg/: CMakeLists.txt  matrix.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  matrix4_sse.cpp  matrix_interface.cpp  simd.cpp  vector.cpp  vector2.cpp  vector2_sse.cpp  vector3.cpp  vector3_sse.cpp  vector4.cpp  vector4_sse.cpp  vector_interface.cpp  vector_sse.cpp
optional/natvis/: pool.natvis
python/: pyproject.toml
python/scripts/: download_dependencies.py
python/tools/: build_shaders.py  download_dependencies.py
shaders/engine/: gradient.slang  mesh_triangle.slang  static_triangle.slang  test.slang
shaders/game/tilemap/: tilemap.slang
supplimentary/: allocation_proof.csv
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt  test_bitset.cpp  test_engine-b12d07c_include.cmake  test_pool.cpp  test_region.cpp
tests/linalg/: CMakeLists.txt  bench_linalg_scalar-b12d07c_include.cmake  bench_linalg_sse-b12d07c_include.cmake  bench_matrix2_double.cpp  bench_matrix2_float.cpp  bench_matrix3_double.cpp  bench_matrix3_float.cpp  bench_matrix4_double.cpp  bench_matrix4_float.cpp  bench_vector2_double.cpp  bench_vector2_float.cpp  bench_vector3_double.cpp  bench_vector3_float.cpp  bench_vector4_double.cpp  bench_vector4_float.cpp  test_linalg_scalar-b12d07c_include.cmake  test_linalg_sse-b12d07c_include.cmake  test_matrix2_double.cpp  test_matrix2_float.cpp  test_matrix3_double.cpp  test_matrix3_float.cpp  test_matrix4_double.cpp  test_matrix4_float.cpp  test_vector2_double.cpp  test_vector2_float.cpp  test_vector3_double.cpp  test_vector3_float.cpp  test_vector4_double.cpp  test_vector4_float.cpp
